chore: downgrade to jdk 11