@@ -7,13 +7,11 @@ import com.fyeeme.quasar.core.exception.CommonError;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.util.CollectionUtils;
 
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.Path;
-import javax.persistence.criteria.Predicate;
-import javax.persistence.criteria.Root;
+import javax.persistence.criteria.*;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * this class is used to build all the queries and passed as parameters.
@@ -26,21 +24,22 @@ public class GenericSpecificationBuilder {
     public static <T> Specification<T> buildSpecs(QueryCondition filterQuery, Class<T> clazz) {
         Specification<T> andSpecs = (root, query, builder) -> {
             var andConditions = Optional.ofNullable(filterQuery.getAndConditions()).orElse(Collections.emptyList());
-            var andPredicates = andConditions.stream().map(condition -> addFieldPredicates(condition, builder, root)).toList();
+            var andPredicates =
+                    andConditions.stream().map(condition -> addFieldPredicates(condition, builder, root)).collect(Collectors.toList());
 
             return buildPredicates(builder, andPredicates);
         };
 
         Specification<T> joinSpecs = (root, query, builder) -> {
             var joinConditions = Optional.ofNullable(filterQuery.getJoinConditions()).orElse(Collections.emptyList());
-            var joinPredicates = joinConditions.stream().map(condition -> addJoinPredicates(condition, builder, root)).toList();
+            var joinPredicates = joinConditions.stream().map(condition -> addJoinPredicates(condition, builder, root)).collect(Collectors.toList());
 
             return buildPredicates(builder, joinPredicates);
         };
 
         Specification<T> orSpecs = (root, query, builder) -> {
             var orConditions = Optional.ofNullable(filterQuery.getOrConditions()).orElse(Collections.emptyList());
-            var orPredicates = orConditions.stream().map(condition -> addFieldPredicates(condition, builder, root)).toList();
+            var orPredicates = orConditions.stream().map(condition -> addFieldPredicates(condition, builder, root)).collect(Collectors.toList());
 
             return buildPredicates(builder, orPredicates);
         };
@@ -56,6 +55,8 @@ public class GenericSpecificationBuilder {
     private static <T> Predicate addJoinPredicates(QueryCondition.JoinFieldCondition condition, CriteriaBuilder builder, Root<T> root) {
         var fieldCondition = condition.getCondition();
         var joinEntity = root.join(condition.getJoinField());
+        // TODO suppport joint type for join conditon
+        //var joinEntity = root.join(condition.getJoinField(), JoinType.RIGHT);
         var expression = joinEntity.get(fieldCondition.getField());
         return addFieldPredicate(fieldCondition, builder, expression);
     }
@@ -68,22 +69,34 @@ public class GenericSpecificationBuilder {
     private static Predicate addFieldPredicate(QueryCondition.FieldCondition condition, CriteriaBuilder builder, Path expression) {
         var operator = QueryOperationEnum.fromValue(condition.getOperator());
 
-        return switch (operator) {
-            case EQUAL -> builder.equal(expression, condition.getValue());
-            case LIKE -> builder.like(expression, "%" + condition.getValue() + "%");
-            //Cannot cast java.lang.Integer to java.lang.Long"
-            case IN -> builder.in(expression).value(((List) condition.getValue()).stream().map(val ->
-                    val instanceof Number ? ((Number)val).longValue() : val).toList());
-//            case IN -> builder.in(expression).value(condition.getValue());
-            case LESS_THAN -> builder.lessThan(expression, (Comparable) condition.getValue());
-            case LESS_THAN_OR_EQUAL_TO -> builder.lessThanOrEqualTo(expression, (Comparable) condition.getValue());
-            case GREATER_THAN -> builder.greaterThan(expression, (Comparable) condition.getValue());
-            case GREATER_THAN_OR_EQUAL_TO -> builder.greaterThanOrEqualTo(expression, (Comparable) condition.getValue());
-            case NOT_EQUAL -> builder.notEqual(expression, condition.getValue());
-            case IS_NULL -> builder.isNull(expression);
-            case IS_NOT_NULL -> builder.isNotNull(expression);
-            default -> throw new BizException(CommonError.BAD_REQUEST, condition.getOperator() + "is not a valid operate");
-        };
+        switch (operator) {
+            case EQUAL:
+                return builder.equal(expression, condition.getValue());
+            case LIKE:
+                return builder.like(expression, "%" + condition.getValue() + "%");
+            case IN:
+                return builder.in(expression).value(((List) condition.getValue()).stream().map(val ->
+                        val instanceof Number ? ((Number) val).longValue() : val).collect(Collectors.toList()));
+            case LESS_THAN:
+                return builder.lessThan(expression, (Comparable) condition.getValue());
+            case LESS_THAN_OR_EQUAL_TO:
+                return builder.lessThanOrEqualTo(expression, (Comparable) condition.getValue());
+            case GREATER_THAN:
+                return builder.greaterThan(expression, (Comparable) condition.getValue());
+            case GREATER_THAN_OR_EQUAL_TO:
+                return builder.greaterThanOrEqualTo(expression, (Comparable) condition.getValue());
+
+            case NOT_EQUAL:
+                return builder.notEqual(expression, condition.getValue());
+            case IS_NULL:
+                return builder.isNull(expression);
+            case IS_NOT_NULL:
+                return builder.isNotNull(expression);
+            default:
+                throw new BizException(CommonError.BAD_REQUEST, condition.getOperator() + "is not a valid " +
+                        "operate");
+        }
+
     }
 
 }
